--- a/public/404.html
+++ b/public/404.html
@@ -1,67 +1,86 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl" dir="ltr">
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
 
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex, nofollow" />
 
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    <title>Page Not Found</title>
 
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
 
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
+    <style>
+     ::-moz-selection {
+          background: #b3d4fc;
+          text-shadow: none;
+      }
+
+      ::selection {
+          background: #b3d4fc;
+          text-shadow: none;
+      }
+
+      html {
+          padding: 30px 10px;
+          font-size: 20px;
+          line-height: 1.4;
+          color: #737373;
+          background: #f0f0f0;
+          -webkit-text-size-adjust: 100%;
+          -ms-text-size-adjust: 100%;
+      }
+
+      html,
+      input {
+          font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      }
+
+      body {
+          max-width: 500px;
+          width: 500px;
+          padding: 30px 20px 50px;
+          border: 1px solid #b3b3b3;
+          border-radius: 4px;
+          margin: 0 auto;
+          box-shadow: 0 1px 10px #a7a7a7, inset 0 1px 0 #fff;
+          background: #fcfcfc;
+      }
+
+      h1 {
+          margin: 0 10px;
+          font-size: 50px;
+          text-align: center;
+      }
+
+      h1 span {color: #bbb;}
+
+      h3 {margin: 1.5em 0 0.5em;}
+
+      p {margin: 1em 0;}
+
+      ul {
+          padding: 0 0 0 40px;
+          margin: 1em 0;
+      }
+
+      .container {
+          max-width: 380px;
+          width: 380px;
+          margin: 0 auto;
+      }
+    </style>
+
 </head>
-
 <body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+
+  <div class="container">
+   <div class="row">
+     <h1>Not found <span>:(</span></h1>
+      <p>Sorry, but the page you were trying to view does not exist.</p>
+   </div>
   </div>
+
 </body>
 </html>
